<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="purchase_price">Purchase price:</string>
    <string name="down_payment">Down payment:</string>
    <string name="interest_rate">Interest rate:</string>
    <string name="loan_length">Loan length:</string>
    <string name="months">months</string>
    <string name="percentage">percentage</string>
    <string name="dollar_amount">dollar amount</string>
</resources>
